Revise quiz content and formatting in vatentine.html
Updated quiz questions and answers with emojis and corrected options.

--- a/vatentine.html
+++ b/vatentine.html
@@ -60,7 +60,7 @@
 <body>
 
 <div class="card">
-  <h2 id="question">Question here</h2>
+  <h2 id="question"></h2>
   <div id="options"></div>
 </div>
 
@@ -69,28 +69,28 @@
     {
       q: "What is my favorite color? 💕",
       options: ["Black", "Pink", "Blue", "Red"],
-      answer: "BLUE"
+      answer: "Blue"
     },
     {
       q: "When did we first start talking? 😌❤️",
-      options: ["10thstd", "11th", "12th"],
-      answer: "10thstd 😏"
+      options: ["10th std", "11th", "12th"],
+      answer: "10th std"
     },
     {
-      q: "What do I like more?",
+      q: "What do I like more? 😏",
       options: ["Chocolate", "You", "Ice cream", "Sleep"],
       answer: "You"
     },
     {
-      q: "What nickname do I love the most?",
+      q: "What nickname do I love the most? 💖",
       options: ["shiya😍", "shiyona ❤️", "vava"],
-      answer: "shiya😍 "
+      answer: "shiya😍"
     },
     {
-      q:"What was the first gift I bought you?",
-      options:["chain","mobile case","dairymilk"],
-      answer:"dairymilk "
-    }'
+      q: "What was the first gift I bought you? 🎁",
+      options: ["chain", "mobile case", "dairymilk"],
+      answer: "dairymilk"
+    }
   ];
 
   let current = 0;
@@ -122,7 +122,7 @@
           document.body.innerHTML = `
             <h1 style="color:white; text-align:center;">
               You passed 😍💖 <br><br>
-              Happy Valentine’s Day ❤️
+               ❤️
             </h1>`;
         }
       }, 800);
